Fix z-index for sidenav

--- a/src/app/shared/components/menu/menu.component.less
+++ b/src/app/shared/components/menu/menu.component.less
@@ -191,7 +191,7 @@
     }
 
     &__sidenav {
-      height: 100%;
+      height: 100vh;
       position: fixed;
       padding: 20px;
       max-width: 80%;
