--- a/src/styles.less
+++ b/src/styles.less
@@ -129,5 +129,5 @@ ngx-gallery-preview.ngx-gallery-active {
 }
 
 .mat-drawer.mat-drawer-side {
-  z-index: 200;
+  z-index: 200 !important;
 }
